--- a/src/app/components/photos/photos.component.html
+++ b/src/app/components/photos/photos.component.html
@@ -1,1 +1,4 @@
-<img [src]="photoUrl" alt="" />
+<div>
+  <button (click)="onClick()">Fetch New Image</button>
+</div>
+<img *ngIf="photoUrl" [src]="photoUrl" alt="" />
